Bug 402735 - cant set NARRATION to eng
Summary: cant set NARRATION to eng
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.14
Platform: Mint (Debian based) Linux
: NOR major
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
: 403361 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-12-31 18:44 UTC by tonyarcher
Modified: 2019-01-18 16:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tonyarcher 2018-12-31 18:44:47 UTC
SUMMARY
try to edit station details but the option to disable NAR is greyed out

STEPS TO REPRODUCE
1. launch kaffeine
2. edit channel details
3. try to set audio channel NAR to eng

OBSERVED RESULT
cant be done as the contorl is "greyed out" and inoperable.

EXPECTED RESULT
ability to change NAR to eng

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION this used to be no problem in older kaffeine... someone has messed it up and its a real nuiscance ot have to change by hand every channel change
Comment 1 Mauro Carvalho Chehab 2019-01-02 12:18:59 UTC
There was a major redesign that fixed language selection on Kaffeine - needed on EU Countries where programs are received with multiple audio channels - each with one different language, but it doesn't take narration into account.

It should probably be easy to add support for it, but I need a stream that has both narration and non-narration audios, in order to use my RF generators to test it and see how the narration info is encoded.

Could you please record ~60 seconds of the full MPEG-TS affected by this bug and share it to me? You'll need to use the command line dvbv5-zap tool. See:

https://www.linuxtv.org/wiki/index.php/Dvbv5-zap#Recording_the_full_MPEG_stream_on_a_transponder

PS.: This is usually a big file. You'll need to store it at Google Drive (or similar) and send me a shared link. Feel free to send the link directly to my e-mail.
Comment 2 Mauro Carvalho Chehab 2019-01-02 15:46:09 UTC
Git commit 4bb4ad81dc03494d28c9aa5883faf8dcf6468ef5 by Mauro Carvalho Chehab.
Committed on 02/01/2019 at 15:45.
Pushed by mauroc into branch 'master'.

dvbchanneldialog: fix audio channel selection

While Kaffeine is properly detecting the audio channels inside
a MPEG-TS stream, the selection dialog is disabled.

The problem is that Kaffeine's logic is to allow selecting the
audio channel only if there are more than one audio PID, but
the check is at the wrong place!

So, move it to be at the right place. While here, do the check
using the checkbox variable, instead of relying on something
else.

Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>

M  +4    -3    src/dvb/dvbchanneldialog.cpp

https://commits.kde.org/kaffeine/4bb4ad81dc03494d28c9aa5883faf8dcf6468ef5
Comment 3 Mauro Carvalho Chehab 2019-01-02 15:52:54 UTC
(In reply to Mauro Carvalho Chehab from comment #1)
> There was a major redesign that fixed language selection on Kaffeine -
> needed on EU Countries where programs are received with multiple audio
> channels - each with one different language, but it doesn't take narration
> into account.
> 
> It should probably be easy to add support for it, but I need a stream that
> has both narration and non-narration audios, in order to use my RF
> generators to test it and see how the narration info is encoded.
> 
> Could you please record ~60 seconds of the full MPEG-TS affected by this bug
> and share it to me? You'll need to use the command line dvbv5-zap tool. See:
> 
> https://www.linuxtv.org/wiki/index.php/Dvbv5-
> zap#Recording_the_full_MPEG_stream_on_a_transponder
> 
> PS.: This is usually a big file. You'll need to store it at Google Drive (or
> similar) and send me a shared link. Feel free to send the link directly to
> my e-mail.

Ok, this bug happens also on channels with multiple audio PIDs. It was due to an if () check that was misplaced.

I fixed it. You should be able to select a different audio channel now at the channel edit window.

It would still be worth if you could later send me a 60 seconds of a channel with narration, as I could try to improve the GUI in order for it to display a different string for narration and try to select the non-narration PID by default (if such information is somehow present at some descriptor at PMT table).
Comment 4 Mauro Carvalho Chehab 2019-01-18 16:24:18 UTC
*** Bug 403361 has been marked as a duplicate of this bug. ***